# segflow4d

./: .gitignore  CLAUDE.md  README.md  example_config.json  example_config.yaml  pyproject.toml  setup.py  test_type_consolidation.py
.github/: environments.instructions.md
.github/workflows/: ci.yml  release.yml
docs/: developer.md
examples/: example_config_fireants.yaml  example_config_greedy.yaml
scripts/: generate_real_fixtures.py  setup_fireants.sh
src/: main.py  run_fire_ants.py
src/common/types/: abstract_registration_options.py  image_wrapper.py  mesh_wrapper.py  propagation_data_object.py  propagation_input.py  propagation_object.py  propagation_options.py  propagation_strategy_data.py  registration_backends.py  registration_methods.py  registration_output.py  tp_data.py  tp_image_group.py  tp_partition.py  tp_partition_input.py  tp_partition_input_group.py  tp_partition_output.py  tp_partition_output_group.py
src/processing/: image_processing.py
src/processing/cli/: create_reference_mask.py  create_tp_images.py  ml_seg_mesh_gen.py  resample_to_reference.py
src/processing/segmentation_mesh_generator/: abstract_segmentation_mesh_generator.py  multi_label_seg_mesh_generator.py
src/propagation/: propagation_pipeline.py  tp_partition.py  tp_partition_input.py
src/propagation/propagation_strategy/: abstract_propagation_strategy.py  propagation_strategy_factory.py  sequential_propagation_strategy.py  star_propagation_strategy.py
src/propagation_io/: async_writer.py  image_writers.py
src/registration/: __init__.py  abstract_registration_handler.py  registration_handler_factory.py  registration_manager.py
src/registration/fireants/: fireants_registration_handler.py
src/registration/greedy/: greedy_registration_handler.py
src/registration/registration_handler/: __init__.py  abstract_registration_handler.py  registration_handler_factory.py
src/registration/registration_handler/fireants/: fireants_registration_handler.py  fireants_registration_options.py  gpu_mesh_warper.py  run_fireants.py
src/registration/registration_handler/greedy/: greedy_registration_handler.py
src/registration/registration_manager/: __init__.py  abstract_registration_manager.py  cpu_registration_manager.py  factory.py  gpu_device_manager.py  gpu_registration_manager.py  gpu_worker.py
src/registration/tests/: test_registration_manager.py
src/segflow4d/: __init__.py  main.py
src/segflow4d/common/types/: image_wrapper.py  interpolation_type.py  mesh_wrapper.py  propagation_data_object.py  propagation_input.py  propagation_object.py  propagation_options.py  propagation_strategy_name.py  registration_methods.py  tp_data.py
src/segflow4d/processing/: image_processing.py
src/segflow4d/processing/cli/: create_reference_mask.py  create_tp_images.py  ml_seg_mesh_gen.py  resample_to_reference.py
src/segflow4d/processing/segmentation_mesh_generator/: abstract_segmentation_mesh_generator.py  multi_label_seg_mesh_generator.py
src/segflow4d/propagation/: propagation_pipeline.py  tp_partition.py  tp_partition_input.py
src/segflow4d/propagation/propagation_strategy/: abstract_propagation_strategy.py  propagation_strategy_factory.py  sasd_propagation_strategy.py  sequential_propagation_strategy.py  star_propagation_strategy.py
src/segflow4d/registration/: __init__.py
src/segflow4d/registration/registration_handler/: __init__.py  abstract_registration_handler.py  registration_handler_factory.py
src/segflow4d/setup/: install_fireants.py
src/utility/file_writer/: __init__.py  async_writer.py
src/utility/image_helper/: abstract_image_helper.py  cpu_image_helper.py  image_helper_factory.py
src/utility/io/: async_writer.py  mesh_writers.py
src/utility/mesh_helper/: mesh_helper.py
src/utility/validation/: batch_validation.py  segmentation_validation.py  surface_mesh_validation.py
tests/: README.md  conftest.py
tests/e2e/: test_pipeline_real.py  test_pipeline_synthetic.py
tests/fixtures/real_data/: expected_metrics.json
tests/integration/: test_propagation_input_factory.py  test_propagation_strategies.py  test_propagation_strategy_combo.py  test_tp_partition.py
tests/unit/: test_async_writer.py  test_greedy_handler.py  test_image_processing.py  test_image_wrapper.py  test_mesh_warper.py  test_tp_data.py  test_validation_metrics.py
(+22 files in other folders)
