[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segflow4d"
version = "1.1.3"
description = "Create 4D segmentation from sparse segmentations using image registration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Jilei Hao"}]
dependencies = [
    "torch>=1.8",
    "SimpleITK",
    "fireants",
    "matplotlib",
    "nvidia-ml-py3",
    "vtk",
    "pyyaml",
    "medpy",
]

[project.scripts]
segflow4d = "segflow4d.main:main"
run-fireants = "segflow4d.registration.registration_handler.fireants.run_fireants:main"
create-reference-mask = "segflow4d.processing.cli.create_reference_mask:main"
create-tp-images = "segflow4d.processing.cli.create_tp_images:main"
resample-to-reference = "segflow4d.processing.cli.resample_to_reference:main"
mesh-gen = "segflow4d.processing.cli.ml_seg_mesh_gen:main"
test_registration_manager = "segflow4d.registration.tests.test_registration_manager:main"
gpu-mesh-warper = "segflow4d.registration.registration_handler.fireants.gpu_mesh_warper:main"
segmentation-validation = "segflow4d.utility.validation.segmentation_validation:main"
batch-segmentation-validation = "segflow4d.utility.validation.batch_validation:main"
segflow4d-install-fireants = "segflow4d.setup.install_fireants:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-json-report>=1.5",
    "pytest-cov>=4.0",
]
greedy = [
    "picsl-greedy",
]
all = [
    "picsl-greedy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "gpu: tests that require a CUDA-capable GPU",
    "slow: tests that take a long time to run",
    "requires_real_data: tests that require real patient data fixtures",
    "greedy: tests that require picsl-greedy (pip install segflow4d[greedy])",
]

[tool.setuptools.packages.find]
where = ["src"]
